--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "gulp-svgstore": "^7.0.1",
     "gulp-webp": "^4.0.1",
     "posthtml-include": "^1.2.0",
+    "stylelint": "^10.0.1",
     "stylelint-config-htmlacademy": "^0.1.3"
   },
   "scripts": {
